0.4.1 (trunk):
* Expose the `milestone` field for an issue.
* Create a default `lib_test/config.ml` if one doesnt exist (from the template
  in `lib_test/config.ml.in`.

0.4.0 (2012-12-25):
* Add a `git-jar` command which provides a convenient command-line interface
  to list, create and save tokens.
* Add a `github.unix` subpackage which provides a `Github_cookie_jar` module
  which saves tokens in `$HOME/.github` for other applications to query if
  they use the Github API.
* Complete the auth API, and rename functions slightly for consistency. We now
  have `Token.get_all` and `Token.get` to retrieve auth information, and
 `Token.create` for constructing them. The API also includes support for adding
  notes and URLs, which are stored on the Github side.

0.3.3 (2012-12-18):
* Add `Repo.info` to retrieve repository metadata.

0.3.2 (2012-12-14):
* Add ATD descriptions for commits, tags, author info, and repo tags.
* Add API calls to retrieve tags, dates and refs.

0.3.1 (2012-10-14):
* Support PREFIX during build for installation prefix.
* Adapt to uri-1.3.3 interface (which now supports multi-value
  queries, as per the RFC).

0.3.0 (2012-09-11):
* Initial public release.