@@ -1,4 +1,6 @@
 0.4.1 (trunk):
+* Add `Github.Issues.comments` to retrieve issue comments, and an `issue_comment`
+  type in the ATD specification for the returned value.
 * Expose the `milestone` field for an issue.
 * Create a default `lib_test/config.ml` if one doesnt exist (from the template
   in `lib_test/config.ml.in`.
